@@ -29,7 +29,7 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.1'
     implementation 'org.apache.logging.log4j:log4j-core:2.24.0'
     implementation 'com.oracle.database.jdbc:ojdbc10:19.24.0.0'
-    implementation 'org.springframework:spring-jdbc:6.1.4'
+    implementation 'org.springframework:spring-jdbc:6.1.5'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
