@@ -1,3 +1,6 @@
+Nov 26, 2024
+  curation: daf: fields mod_entity_id and mod_internal_id are no longer exported -- per request from the Alliance
+
 Nov 15, 2024
   curation: genes: xrefs: fix: removed duplicate xrefs
 
